[package]
name = "oneshim-network"
description = "HTTP/SSE/WebSocket/gRPC 네트워크 어댑터"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
grpc = ["tonic", "prost", "prost-types", "tonic-health", "tonic/tls-native-roots"]

[dependencies]
oneshim-core = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
lz4_flex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }

# gRPC (Phase 34 - 선택적 의존성)
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
tonic-health = { workspace = true, optional = true }

[dev-dependencies]
mockito = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { workspace = true }

[[bench]]
name = "compression_bench"
harness = false

[build-dependencies]
tonic-build = { workspace = true }
