[package]
name = "oneshim-sandbox-worker"
description = "Sandboxed automation action executor"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "oneshim-sandbox-worker"
path = "src/main.rs"

[dependencies]
oneshim-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
