[package]
name = "oneshim-suggestion"
description = "제안 파이프라인 — SSE 수신, 피드백 전송, 로컬 큐"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
oneshim-core = { workspace = true }
oneshim-network = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
