[package]
name = "oneshim-ui"
description = "순수 Rust UI — iced 기반 메인 창, 시스템 트레이, 알림"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
oneshim-core = { workspace = true }
oneshim-suggestion = { workspace = true }
oneshim-monitor = { workspace = true }
oneshim-storage = { workspace = true }
iced = { workspace = true }
tray-icon = { workspace = true }
notify-rust = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sysinfo = { workspace = true }
directories = { workspace = true }
image = { workspace = true }

# macOS 네이티브 API (창 숨기기/표시) - objc2 생태계
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-foundation = { workspace = true }

# Windows 네이티브 API (창 숨기기/표시)
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }
