[package]
name = "oneshim-vision"
description = "Edge 이미지 처리 — 스크린 캡처, 델타 인코딩, OCR"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
ocr = ["leptess"]

[dependencies]
oneshim-core = { workspace = true }
image = { workspace = true }
fast_image_resize = { workspace = true }
webp = { workspace = true }
xcap = { workspace = true }
leptess = { workspace = true, optional = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "vision_bench"
harness = false
