[package]
name = "oneshim-web"
description = "ONESHIM 로컬 웹 대시보드 서버"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
# 내부 크레이트
oneshim-core = { workspace = true }
oneshim-storage = { workspace = true }
oneshim-automation = { workspace = true }

# 비동기 런타임
tokio = { workspace = true }

# 직렬화
serde = { workspace = true }
serde_json = { workspace = true }

# 로깅
tracing = { workspace = true }

# 시간
chrono = { workspace = true }

# 에러 처리
thiserror = { workspace = true }

# UUID
uuid = { workspace = true }

# 웹 프레임워크
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# SSE 스트리밍
tokio-stream = { workspace = true }
futures = { workspace = true }

# 정적 파일 임베드
rust-embed = { workspace = true }
mime_guess = { workspace = true }

# SQLite (직접 쿼리용)
rusqlite = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
