[package]
name = "oneshim-web"
description = "ONESHIM 로컬 웹 대시보드 서버"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
# 내부 크레이트
oneshim-core = { workspace = true }
oneshim-api-contracts = { workspace = true }

# 비동기 런타임
tokio = { workspace = true }

# 직렬화
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

# 로깅
tracing = { workspace = true }

# 시간
chrono = { workspace = true }

# 에러 처리
thiserror = { workspace = true }

# UUID
uuid = { workspace = true }

# Bug report
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }

# 웹 프레임워크
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# SSE 스트리밍
tokio-stream = { workspace = true }
futures = { workspace = true }

# 정적 파일 임베드
rust-embed = { workspace = true }
mime_guess = { workspace = true }

# D13: gRPC dashboard server (feature-gated — see [features] section).
tonic = { workspace = true, optional = true }
tonic-health = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
# prost-types needed for google.protobuf.Timestamp in v2b generated code.
prost-types = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
# D13-v2b: server-streaming generators (SubscribeMetrics realtime path).
async-stream = { workspace = true, optional = true }
# D13-v2b: constant-time token compare in auth_gate (RFC 7235 + timing side-channel).
subtle = { workspace = true, optional = true }

[features]
default = []
# D13: Enable gRPC dashboard server on a separate port (10091 by default).
# When disabled, the crate has zero gRPC-related code + zero tonic dep cost.
grpc-dashboard = [
  "dep:tonic",
  "dep:tonic-health",
  "dep:tonic-prost",
  "dep:prost",
  "dep:prost-types",
  "dep:async-trait",
  "dep:async-stream",
  "dep:subtle",
]

# D13-v2b PR-B2: test-only helpers (MockSystemMonitor, DashboardServiceImpl
# introspection accessors). INVARIANT: MUST NEVER be enabled by default or
# transitively via `grpc-dashboard`. Strictly opt-in for in-tree tests + any
# future downstream test harness that reuses the mock.
test-support = []


[dev-dependencies]
oneshim-automation = { workspace = true }
oneshim-storage = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
mockito = { workspace = true }
